[gd_scene load_steps=26 format=2]

[ext_resource path="res://Fighters/Fighter.tscn" type="PackedScene" id=1]
[ext_resource path="res://100checker.png" type="Texture" id=2]
[ext_resource path="res://Game/GameCamera.gd" type="Script" id=3]
[ext_resource path="res://Game/Game.gd" type="Script" id=4]
[ext_resource path="res://Game/GameUI.gd" type="Script" id=5]
[ext_resource path="res://spr_realisticexplosion/spr_realisticexplosion_5.png" type="Texture" id=6]
[ext_resource path="res://spr_realisticexplosion/spr_realisticexplosion_8.png" type="Texture" id=7]
[ext_resource path="res://spr_realisticexplosion/spr_realisticexplosion_4.png" type="Texture" id=8]
[ext_resource path="res://spr_realisticexplosion/spr_realisticexplosion_0.png" type="Texture" id=9]
[ext_resource path="res://spr_realisticexplosion/spr_realisticexplosion_3.png" type="Texture" id=10]
[ext_resource path="res://spr_realisticexplosion/spr_realisticexplosion_6.png" type="Texture" id=11]
[ext_resource path="res://spr_realisticexplosion/spr_realisticexplosion_7.png" type="Texture" id=12]
[ext_resource path="res://spr_realisticexplosion/spr_realisticexplosion_9.png" type="Texture" id=13]
[ext_resource path="res://spr_realisticexplosion/spr_realisticexplosion_10.png" type="Texture" id=14]
[ext_resource path="res://spr_realisticexplosion/spr_realisticexplosion_11.png" type="Texture" id=15]
[ext_resource path="res://spr_realisticexplosion/spr_realisticexplosion_2.png" type="Texture" id=16]
[ext_resource path="res://spr_realisticexplosion/spr_realisticexplosion_1.png" type="Texture" id=17]
[ext_resource path="res://spr_realisticexplosion/spr_realisticexplosion_12.png" type="Texture" id=18]
[ext_resource path="res://spr_realisticexplosion/spr_realisticexplosion_13.png" type="Texture" id=19]
[ext_resource path="res://spr_realisticexplosion/spr_realisticexplosion_14.png" type="Texture" id=20]
[ext_resource path="res://spr_realisticexplosion/spr_realisticexplosion_16.png" type="Texture" id=21]
[ext_resource path="res://spr_realisticexplosion/spr_realisticexplosion_15.png" type="Texture" id=22]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [  ],
"loop": false,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 17 ), ExtResource( 16 ), ExtResource( 10 ), ExtResource( 8 ), ExtResource( 6 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 7 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 22 ), ExtResource( 21 ) ],
"loop": false,
"name": "explode",
"speed": 20.0
} ]

[sub_resource type="AtlasTexture" id=3]
flags = 2
atlas = ExtResource( 2 )
region = Rect2( 50, 0, 50, 50 )

[sub_resource type="AtlasTexture" id=2]
flags = 2
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 50, 50 )

[node name="Game" type="SGFixedNode2D" groups=["network_sync"]]
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
offset = Vector2( 0, -250 )
region_enabled = true
region_rect = Rect2( 0, 0, 1000, 500 )
__meta__ = {
"_edit_lock_": true
}

[node name="Fighter1" parent="." instance=ExtResource( 1 )]
position = Vector2( -200, 0 )
fixed_position_x = -13107200
fixed_position_y = 0
opponent_path = NodePath("../Fighter2")

[node name="Fighter2" parent="." instance=ExtResource( 1 )]
position = Vector2( 200, 0 )
fixed_position_x = 13107200
fixed_position_y = 0
is_p2 = true
opponent_path = NodePath("../Fighter1")

[node name="Spawned" type="SGFixedNode2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
process_priority = -1
position = Vector2( 0, -250 )
current = true
script = ExtResource( 3 )
path_one = NodePath("../Fighter1")
path_two = NodePath("../Fighter2")

[node name="HugeExplosion" type="AnimatedSprite" parent="Camera2D"]
self_modulate = Color( 1, 1, 1, 0.937255 )
position = Vector2( 4, 238 )
scale = Vector2( 30, 30 )
frames = SubResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="TimerTEMPORARY" type="Label" parent="CanvasLayer/UI"]
margin_left = 488.0
margin_top = 91.0
margin_right = 580.0
margin_bottom = 105.0
rect_scale = Vector2( 3, 3 )
text = "Time Left: 100"
align = 1

[node name="TextureProgress" type="TextureProgress" parent="CanvasLayer/UI"]
modulate = Color( 1, 0, 0, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -600.0
margin_top = 30.0
margin_right = -100.0
margin_bottom = 70.0
max_value = 20.0
value = 10.0
texture_under = SubResource( 3 )
texture_progress = SubResource( 2 )
fill_mode = 1
nine_patch_stretch = true

[node name="TextureProgress2" type="TextureProgress" parent="CanvasLayer/UI"]
modulate = Color( 1, 0, 0, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = 100.0
margin_top = 30.0
margin_right = 600.0
margin_bottom = 70.0
max_value = 20.0
value = 10.0
texture_under = SubResource( 3 )
texture_progress = SubResource( 2 )
nine_patch_stretch = true
